# bevy_normal_material

./: .gitignore  Cargo.toml  README.md
examples/: scene.rs  transparent.rs
src/: lib.rs  material.rs  plugin.rs
src/shaders/: normal.wgsl
