[package]
authors = [
  "Masatatsu Nakamura <masatatsu.nakamura@gmail.com>",
]
categories = ["rendering"]
description = "Simple normal material for Bevy"
edition = "2021"
homepage = "https://github.com/mattatz/bevy_normal_material"
keywords = ["bevy", "gamedev", "graphics"]
license = "MIT"
name = "bevy_normal_material"
readme = "README.md"
repository = "https://github.com/mattatz/bevy_normal_material"
version = "0.3.0"

[dependencies.bevy]
default-features = false
features = ["bevy_render", "bevy_pbr", "bevy_asset"]
version = "0.11"

[dev-dependencies.bevy]
default-features = false
features = ["bevy_render", "bevy_pbr", "bevy_core_pipeline", "bevy_asset"]
version = "0.11"

[features]
"examples" = ["bevy/bevy_render", "bevy/bevy_pbr", "bevy/bevy_core_pipeline", "bevy/bevy_winit", "bevy/x11"]

[[example]]
name = "scene"
required-features = ["examples"]

[[example]]
name = "transparent"
required-features = ["examples"]
