[package]
authors = [
  "Masatatsu Nakamura <masatatsu.nakamura@gmail.com>",
]
categories = ["rendering"]
description = "Simple normal material for Bevy"
edition = "2021"
homepage = "https://github.com/mattatz/bevy_normal_material"
keywords = ["bevy", "gamedev", "graphics"]
license = "MIT"
name = "bevy_normal_material"
readme = "README.md"
repository = "https://github.com/mattatz/bevy_normal_material"
version = "0.8.0"

[dependencies.bevy]
default-features = false
features = ["bevy_render", "bevy_pbr", "bevy_asset", "tonemapping_luts"]
version = "0.16"

[dev-dependencies.bevy]
default-features = false
features = ["bevy_render", "bevy_pbr", "bevy_core_pipeline", "bevy_asset", "bevy_window"]
version = "0.16"

[features]
examples = ["bevy/bevy_render", "bevy/bevy_pbr", "bevy/bevy_core_pipeline", "bevy/bevy_winit", "bevy/x11", "bevy/bevy_window"]
webgl = []

[[example]]
name = "scene"
required-features = ["examples"]

[[example]]
name = "transparent"
required-features = ["examples"]
